# interpreter

./: CMakeLists.txt  LICENSE  README.md
examples/: fibonacci.grm  functions_test.grm  nested_loops.grm  operations_priority_test.grm  showcase.grm
include/: AST.h  Interpreter.h  Parser.h  Tokenizer.h
include/core/: AST.h  Environment.h  Interpreter.h  Parser.h  Token.h  Tokenizer.h
include/objects/: FunctionObject.h  IteratorObject.h  ListObject.h  NumberObject.h  Object.h  RangeObject.h  StringObject.h
src/: Interpreter.cpp  Main.cpp  Parser.cpp  Token.cpp  Tokenizer.cpp
src/core/: Environment.cpp  Interpreter.cpp  Parser.cpp  Token.cpp  Tokenizer.cpp
src/objects/: FunctionObject.cpp  IteratorObject.cpp  ListObject.cpp  NumberObject.cpp  RangeObject.cpp  StringObject.cpp
